--- a/src/Components/css/App.css
+++ b/src/Components/css/App.css
@@ -58,6 +58,27 @@ label{
     font-weight: bold;
     grid-column: 1/3;
 }
+.home{
+    text-align: center;
+}
+.intro{
+    font-weight: 200;
+    padding-top: 20px;
+}
+p{
+    font-size: 1rem;
+    letter-spacing: 0.2rem;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+.btn{
+    padding: 20px;
+    color: var(--one);
+    background-color: var(--three);
+    margin: 10px;
+    border-radius: 40px;
+
+}
 /* reset */
 body{
     font-family: 'Mulish';
