--- a/src/Components/css/App.css
+++ b/src/Components/css/App.css
@@ -45,6 +45,7 @@ a:hover{
     background-color: var(--four);
     border-top-right-radius: 40px;
     border-bottom-left-radius: 40px;
+    padding: 5px;
     color: var(--two);
 }
 img{
